[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "seqeval"
version = "0.0.0"
description = "A sequence labeling evaluation library"
authors = []
packages = [
    { include = "seqeval" }
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy=">=1.14.0"
scikit-learn=">=0.21.3"

[tool.poetry.dev-dependencies]
pytest = "*"
autopep8 = "*"
flake8 = "*"
pytest-cov = "*"
isort = "*"
